--- a/portfolio.html
+++ b/portfolio.html
@@ -21,15 +21,15 @@
         <section>
             <h2>Meus Projetos</h2>
             <ul>
-                <li><a href="https://github.com/AlvesAline" target="_blank">GITHUB</a></li>
-                <li><a href="https://projeto-social-nosporeles.netlify.app/" target="_blank">Projeto 2</a></li>
-                <li><a href="https://www.exemplo.com/projeto3" target="_blank">Projeto 3</a></li>
+                <li><a href="https://github.com/AlvesAline" target="_blank">GitHub</a></li>
+                <li><a href="https://projeto-social-nosporeles.netlify.app/" target="_blank">Projeto NósPorEles</a></li>
+                <li><a href="https://www.linkedin.com/in/aline-alves-dias/recent-activity/all/" target="_blank">Linkedin</a></li>
             </ul>
         </section>
         <button class="botao" onclick="voltarPagina()">Voltar</button>
     </main>
     <footer>
-        <p>&copy; 2024 João Silva. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Aline Alves. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
